# AudibleAppliances

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Manual.md  README.md  audible_travis.enc  concsys  config.json  get_build.sh  image_server.py  keith.py  killstartups  main.cpp  pi_run.sh  pom.xml  runjar  runproject  runserver  runwebserver  ssocr-setup  stopproject  ttssetup.sh
daemon/: CMakeLists.txt  cv_semaphore.cpp  cv_semaphore.hpp  main.cpp  mappings.cpp  mappings.hpp  semaphore.cpp  semaphore.hpp  spin_lock_semaphore.cpp  spin_lock_semaphore.hpp  test.cpp
diskImages/: 18-01-29.7z
gpio/: gpio.py
images/lcd_samples/: manifest
setup-scripts/: ssocr-setup  tts-setup
src/it/java/uk/ac/cam/groupprojects/bravo/tts/: SynthesiserTestIT.java
src/main/java/uk/ac/cam/groupprojects/bravo/barProcessing/: Graph.java
src/main/java/uk/ac/cam/groupprojects/bravo/config/: BikeField.java  BikeFields.java  ConfigData.java  ConfigException.java  SpokenFields.java
src/main/java/uk/ac/cam/groupprojects/bravo/graphProcessing/: Graph.java
src/main/java/uk/ac/cam/groupprojects/bravo/imageProcessing/: BoxInfo.java  BoxType.java  FastRGB.java  (+8 more)
src/test/resources/: testConfig.json
webInterface/: boxes.json  camera.py  image_client.py  main.py
webInterface/backend/: boxes.json  main.py
webInterface/backend/templates/: div_test.html  functions.js  index.html  index_functions.js  myStyle.css  select_components.html  ui_functions.js
webInterface/templates/: functions.js  index.html  index_functions.js  myStyle.css  select_components.html  ui_functions.js
(+108 files in other folders)
